@@ -253,6 +253,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #15220: email.feedparser's line splitting algorithm is now simpler and
+  faster.
+
 - Issue #16743: Fix mmap overflow check on 32 bit Windows.
 
 - Issue #16996: webbrowser module now uses shutil.which() to find a
